# AI-cctv-Survilance

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  visionops.db
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/ai-engine/: README.md  package.json  pyproject.toml
apps/ai-engine/src/: __init__.py  config.py  main.py  redis_streams.py
apps/ai-engine/src/detection/: detector.py  tracker.py  types.py
apps/ai-engine/src/detectors/: __init__.py
apps/ai-engine/src/enrichment/: __init__.py
apps/ai-engine/src/ingestion/: api_client.py  manager.py  sampler.py
apps/ai-engine/src/metrics/: __init__.py  aggregator.py  emitter.py
apps/ai-engine/src/models/: __init__.py
apps/ai-engine/src/pipeline/: __init__.py  worker.py
apps/ai-engine/src/rules/: __init__.py  config_cache.py  emitter.py  engine.py  geometry.py  state.py  types.py
apps/ai-engine/src/tracking/: __init__.py  registry.py
apps/ai-engine/tests/: test_detection.py  test_geometry.py  test_metrics.py  test_rules.py  test_smoke.py  test_tracker.py
apps/api/: README.md  alembic.ini  package.json  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: alerts.py  analytics.py  auth.py  cameras.py  health.py  internal.py  notifications.py  organizations.py  reports.py  router.py  rules.py  stores.py  ws.py  zones.py
apps/api/app/core/: config.py  crypto.py  deps.py  error_handlers.py  exceptions.py  logging.py  pubsub.py  rate_limit.py  redis_client.py  rtsp.py  storage.py  tasks.py
apps/api/app/core/security/: __init__.py  jwt.py  password.py  tokens.py
apps/api/app/db/: base.py  session.py  types.py
apps/api/app/domain/: __init__.py  roles.py
apps/api/app/models/: __init__.py  alert.py  audit_log.py  camera.py  camera_event.py  camera_metric.py  membership.py  mixins.py  notification.py  organization.py  password_reset_token.py  refresh_token.py  report.py  rule.py  store.py  user.py  verification_token.py  zone.py
apps/api/app/repositories/: __init__.py  audit_repository.py  base.py  camera_repository.py  membership_repository.py  notification_repository.py  organization_repository.py  refresh_token_repository.py  report_repository.py  rule_repository.py  store_repository.py  user_repository.py  verification_repository.py
apps/api/app/schemas/: analytics.py  auth.py  camera.py  event.py  health.py  metric.py  notification.py  organization.py  report.py  rule.py  store.py  stream.py  token.py  user.py  zone.py
apps/api/app/services/: __init__.py  alert_service.py  analytics_service.py  audit_service.py  auth_service.py  camera_health_service.py  camera_service.py  event_service.py  metrics_service.py  narrative.py  notification_service.py  organization_service.py  report_csv.py  report_pdf.py  report_service.py  rule_service.py  store_service.py  stream_service.py  token_service.py  zone_service.py
apps/api/app/services/email/: __init__.py  console_sender.py  sender.py
apps/api/migrations/: README.md  env.py
apps/api/migrations/versions/: 0001_auth_and_tenancy.py  0002_stores_and_org_settings.py  0003_cameras.py  0004_rules_events.py  0005_camera_metrics.py  0006_notifications_reports.py  0007_alert_snapshot.py
apps/api/tests/: conftest.py  test_health.py
apps/api/tests/integration/: test_analytics.py  test_camera_health.py  test_cameras.py  test_events.py  test_notifications.py  test_org_onboarding.py  test_org_settings.py  test_refresh_rotation.py  test_register_verify_login.py  test_reports.py  test_rules_api.py  test_stores.py  test_stream.py  test_tenant_isolation.py  test_ws.py
apps/api/tests/unit/: test_crypto.py  test_jwt.py  test_password.py  test_pubsub.py  test_rtsp.py  test_tokens.py
apps/gateway/: README.md  go.mod  package.json
apps/gateway/cmd/gateway/: main.go
apps/gateway/internal/config/: config.go
apps/gateway/internal/mediamtx/: client.go
apps/gateway/internal/server/: server.go  server_test.go
apps/gateway/internal/token/: token.go  token_test.go
apps/mobile/: README.md
apps/web/: README.md  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/components/: auth-guard.tsx  camera-card.tsx  command-palette.tsx  connection-status.tsx  dashboard-sidebar.tsx  detection-overlay.tsx  line-editor.tsx  live-player.tsx  notification-bell.tsx  zone-editor.tsx
apps/web/src/lib/: api-client.ts  api.ts  env.ts
apps/web/src/stores/: auth-store.ts  ui-store.ts
apps/worker/: README.md  package.json  pyproject.toml
apps/worker/src/: __init__.py  celery_app.py  config.py
apps/worker/src/tasks/: __init__.py  camera_health.py  notifications.py  reports.py
apps/worker/tests/: test_worker.py
docs/: DEPLOYMENT.md  DEVELOPMENT_STANDARDS.md  FOLDER_STRUCTURE.md  PRD.md  PRODUCT_VISION.md  PROJECT_PLAN.md  RUNBOOK.md  RUNNING.md  TECH_STACK.md  TESTING.md
docs/adr/: 0001-monorepo-and-setup.md  0002-auth-and-multitenancy.md  0003-stores-and-org-settings.md  0004-cameras-and-credentials.md  0005-live-streaming.md  0006-ai-vision-pipeline.md  0007-rule-engine.md  0008-realtime-websockets.md  0009-notifications-reports.md
infrastructure/docker/: Dockerfile.ai-engine  Dockerfile.api  Dockerfile.gateway  Dockerfile.web  Dockerfile.worker  README.md  mediamtx.yml
infrastructure/docker/postgres/: init.sql
infrastructure/kubernetes/: README.md
infrastructure/nginx/: nginx.conf  prod.conf.template
infrastructure/terraform/: README.md
scripts/: README.md  backup.sh  bootstrap.sh  deploy.sh  generate_keys.sh  init-letsencrypt.sh  restore.sh
(+70 files in other folders)
