[project]
name = "visionops-api"
version = "0.1.0"
description = "VisionOps AI — FastAPI control plane"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "structlog>=24.4.0",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "email-validator>=2.2.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.12",
    "celery[redis]>=5.4.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.8",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Bug-catching baseline: pyflakes (F), import/statement/runtime errors
# (E4/E7/E9), and flake8-bugbear (B). Opinionated style rules (line length,
# import ordering, enum/typing modernization) are intentionally not enforced.
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
